--- a/index.html
+++ b/index.html
@@ -1011,6 +1011,69 @@
 					</ul>
 				  </li>
 				</ul>
+
+				<details>
+				  <summary><h2>🧾 Printing Solutions & Printers List</h2></summary>
+				  <ul>
+					<li><strong>Printing Solutions &gt;&gt; BIJ/CIJ PRO</strong>
+					  <ul>
+						<li>Epson WorkForce Pro WF-C5290</li>
+						<li>Epson WorkForce Pro WF-C5390</li>
+						<li>Epson WorkForce Pro WF-C5790</li>
+						<li>Epson WorkForce Pro WF-C5890</li>
+						<li>Epson WorkForce Pro WF-M5399</li>
+						<li>Epson WorkForce Pro WF-M5899</li>
+						<li>Epson WorkForce Pro WF-R8591</li>
+					  </ul>
+					</li>
+					<li><strong>Printers &gt;&gt; BIJ/CIJ</strong>
+					  <ul>
+						<li>Epson WorkForce Pro WP-4091</li>
+						<li>Epson WorkForce Pro WP-4511</li>
+						<li>Epson WorkForce Pro WP-4521</li>
+						<li>Epson WorkForce WF-100</li>
+						<li>Epson WorkForce WF-2528</li>
+						<li>Epson WorkForce WF-2538</li>
+						<li>Epson WorkForce WF-2548</li>
+						<li>Epson WorkForce WF-2631</li>
+						<li>Epson WorkForce WF-2651</li>
+						<li>Epson WorkForce WF-2661</li>
+						<li>Epson WorkForce WF-2861</li>
+						<li>Epson WorkForce WF-3011</li>
+						<li>Epson WorkForce WF-3521</li>
+						<li>Epson WorkForce WF-7011</li>
+						<li>Epson WorkForce WF-7111</li>
+						<li>Epson WorkForce WF-7511</li>
+						<li>Epson WorkForce WF-7611</li>
+					  </ul>
+					</li>
+					<li><strong>Printing Solutions &gt;&gt; RIPS/LIJ</strong>
+					  <ul>
+						<li>Epson WorkForce Enterprise AM-C400</li>
+						<li>Epson WorkForce Enterprise AM-C550</li>
+						<li>Epson WorkForce Enterprise AM-C4000</li>
+						<li>Epson WorkForce Enterprise AM-C5000</li>
+						<li>Epson WorkForce Enterprise AM-C6000</li>
+						<li>Epson WorkForce Enterprise AM-M5500</li>
+						<li>Epson WorkForce Enterprise WF-C17590</li>
+						<li>Epson WorkForce Enterprise WF-C20590</li>
+						<li>Epson WorkForce Enterprise WF-C20600</li>
+						<li>Epson WorkForce Enterprise WF-C20750</li>
+						<li>Epson WorkForce Enterprise WF-C21000</li>
+						<li>Epson WorkForce Enterprise WF-M20590</li>
+						<li>Epson WorkForce Enterprise WF-M21000</li>
+						<li>Epson WorkForce Pro EM-C800</li>
+						<li>Epson WorkForce Pro EM-C8100</li>
+						<li>Epson WorkForce Pro EM-C8101</li>
+						<li>Epson WorkForce Pro WF-C579R</li>
+						<li>Epson WorkForce Pro WF-C869R</li>
+						<li>Epson WorkForce Pro WF-C878R</li>
+						<li>Epson WorkForce Pro WF-C879R</li>
+					  </ul>
+					</li>
+				  </ul>
+				</details>
+
 				
 				<summary><h2>🧾 Creating a New Record</h2></summary>
 				<ul>
@@ -2997,6 +3060,7 @@
 						"SCN: Scan Cropping Issue",
 						"SCN: Scan Orientation Wrong",
 						"SCN: Scanner not Working",
+						"SCN: Scan to PC Issue",
 						"SCN: Scan to Email Issue",
 						"SCN: Scan to Cloud Issue",
 						"CPY: Faded Copy",
@@ -3050,9 +3114,24 @@
 						"PROJ: No Audio Output",
 						"PROJ: HDMI Port Not Detected",
 						"PROJ: Lens Focus Issue",
+						"TECH: Unusual Sound",
+						"TECH: Loud Noise",
+						"TECH: Grinding or Clicking Noise",
+						"TECH: High-Pitched Tone",
+						"TECH: Continuous Beeping",
+						"TECH: Continuous Buzzing",
+						"TECH: Fan Noise Too Loud",
+						"TECH: Vibrating or Rattling Sound",
+						"TECH: Intermittent Beeping",
+						"TECH: Ink Charging Setup/Issue",
 						"TECH: Firmware Update Failed",
 						"TECH: Driver Installation Error",
 						"TECH: App Connectivity Issue",
+						"TECH: Printer Installation",
+						"TECH: Projector Installation",
+						"TECH: Admin Reset Password",
+						"TECH: Ink Pad Resetter Request",
+						"TECH: Damaged Unit",
 						"TECH: Others (specify)",
 					  ]),
 					}
@@ -3224,6 +3303,7 @@
 						"SCN: Scan Cropping Issue",
 						"SCN: Scan Orientation Wrong",
 						"SCN: Scanner not Working",
+						"SCN: Scan to PC Issue",
 						"SCN: Scan to Email Issue",
 						"SCN: Scan to Cloud Issue",
 						"CPY: Faded Copy",
@@ -3237,6 +3317,7 @@
 						"CPY: Copy Orientation Wrong",
 						"WF: Wi-Fi Setup",
 						"WF: Wi-Fi Not Detected",
+						"WF: Driver Missing",
 						"WF: Wi-Fi Drops/Intermittent",
 						"WF: Wrong Wi-Fi Password",
 						"WF: Weak Wi-Fi Signal",
@@ -3277,9 +3358,24 @@
 						"PROJ: No Audio Output",
 						"PROJ: HDMI Port Not Detected",
 						"PROJ: Lens Focus Issue",
+						"TECH: Unusual Sound",
+						"TECH: Loud Noise",
+						"TECH: Grinding or Clicking Noise",
+						"TECH: High-Pitched Tone",
+						"TECH: Continuous Beeping",
+						"TECH: Continuous Buzzing",
+						"TECH: Fan Noise Too Loud",
+						"TECH: Vibrating or Rattling Sound",
+						"TECH: Intermittent Beeping",
+						"TECH: Ink Charging Setup/Issue",
 						"TECH: Firmware Update Failed",
 						"TECH: Driver Installation Error",
 						"TECH: App Connectivity Issue",
+						"TECH: Printer Installation",
+						"TECH: Projector Installation",
+						"TECH: Admin Reset Password",
+						"TECH: Ink Pad Resetter Request",
+						"TECH: Damaged Unit",
 						"TECH: Others (specify)",
 					  ]),
 					  Warranty: sortOptions([
